# f2rust

./: .gitignore  Cargo.toml  README.md  publish.sh
.github/workflows/: rust.yml
f2rust_compiler/: Cargo.toml
f2rust_compiler/src/: ast.rs  codegen.rs  file.rs  globan.rs  grammar.rs  intrinsics.rs  lib.rs  main.rs  util.rs
f2rust_compiler/src/codegen/: api.rs
f2rust_compiler/tests/: grammar_test.rs
f2rust_ryu/: Cargo.toml  README.md
f2rust_ryu/src/: common.rs  d2s.rs  lib.rs
f2rust_std/: Cargo.toml  README.md
f2rust_std/src/: array.rs  chararray.rs  context.rs  data.rs  errors.rs  format.rs  fstr.rs  intrinsics.rs  io.rs  lib.rs  util.rs
f2rust_std/src/io/: reader.rs  writer.rs
f2rust_std/tests/: io_test.rs
f2rust_test/: Cargo.toml  README.md  build.rs
f2rust_test/fortran/: Makefile  arith_int.exp  arith_int.f90  char_cat.exp  char_cat.f90  char_const.exp  char_const.f90  data_array.exp  data_array.f90  data_char.exp  data_char.f90  data_mixed.exp  data_mixed.f90  data_substr.exp  data_substr.f90  do_loop.exp  do_loop.f90  format.exp  format.f90  nested_loop.exp  nested_loop.f90  stmtfunc.exp  stmtfunc.f90
f2rust_test/src/: main.rs
rsspice/: Cargo.toml  README.md
rsspice/benches/: examples.rs
rsspice/examples/: gfoclt_ex1.rs  gfoclt_ex1.tm  gfoclt_ex1_mt.rs  simple.rs
rsspice/lessons/event_finding/: visibl.rs
rsspice/logs/: .gitignore
rsspice/src/: lib.rs  tspice.rs
rsspice/src/api/: cell.rs  charvec.rs  errors.rs  mod.rs
rsspice_build/: Cargo.toml  README.md
rsspice_build/override/spicelib/: dpr.f  moved.f  seterr.f  swapc_array.f  swapd_array.f  swapi_array.f  twopi.f  zzcputim.f
rsspice_build/src/: main.rs
rsspice_gen/: Cargo.toml
rsspice_gen/src/: lib.rs
tspice-patches/: 0001-TTRANS-Reduce-MXCOMP-to-match-callers.patch  0002-ZZCKCV05-Fix-DOUBLE-PRECISION-being-passed-to-ERRINT.patch  0003-ZZSCUP01-Fix-size-of-dummy-argument-POLCTR.patch  0004-ZZGFCOU-Fix-reference-to-undefined-dummy-argument.patch  0005-INSPEKT-Fix-type-of-DIDPMT.patch  0006-GETFVN-Fix-type-of-INSTID.patch  0007-SUPPORT-UTRANS_2-Fix-type-of-PLACES.patch  0008-TSPICE-F_DSK02-Fix-type-of-WORK.patch  0009-TSPICE-F_SBF-Fix-type-of-HANDLE.patch  0010-TSPICE-F_SPK10-Fix-types-of-BEGIN-END.patch  0011-TSPICE-F_SWAPAD-Fix-type-of-CLEAR-call.patch  0012-TSPICE-F_T_URAND-Fix-type-of-CHCKS.patch  0013-TSPICE-F_XFMSTA-Fix-type-of-DIM.patch  0014-TSPICE-Fix-potential-assignments-to-constant-express.patch  0015-SUPPORT-M2GMCH-Fix-assignment-to-expression.patch  0016-TSPICE-F_DSKOBJ-Fix-passing-.TRUE.-to-an-INTEGER-out.patch  0017-TSPICE-Fix-passing-incorrectly-typed-0-to-CHCKSD.patch  0018-TSPICE-F_DSKW02-Fix-32-bit-integer-overflow.patch  0019-TSPICE-F_DSKX02-Pass-the-correct-array-size-to-DSKMI.patch  0020-ZZEKUE0-456-Fix-incorrect-declarations-of-array-as-s.patch  0021-TSPICE-F_SPKCOR-Fix-array-size.patch  0022-TSPICE-Fix-WORK-array-sizes.patch  0023-Add-SAVE-to-DATA-variables.patch  0024-SUPPORT-QRTRIM-Remove-duplicate-Literature_Reference.patch  0025-PCKBSR-SPKBSR-Fix-missing-argument-documentation.patch  0026-f2rust-F_MOVED-Use-EQUIVALENCE-on-the-whole-array-no.patch  0027-f2rust-Add-explicit-PROGRAM.patch  0028-f2rust-TSPICE-Pass-a-correct-subroutine-type-to-ZZGF.patch  0029-f2rust-Add-MOVEL-and-use-it-for-moving-arrays-of-LOG.patch  0030-f2rust-Avoid-using-CHARACTER-returning-functions-in-.patch  0031-f2rust-Avoid-passing-expression-to-mutable-argument.patch  0032-f2rust-Clone-WORK-array-to-avoid-aliasing-problems.patch  0033-f2rust-Avoid-patterns-like-A-F-A.patch  0034-f2rust-F_DSKW02-Disable-tests-with-invalid-NV-NP-tha.patch  0035-f2rust-TSPICE-F_SCLK1-Disable-non-deterministic-perf.patch  0036-f2rust-Implement-MOVED-more-normally.patch  0037-f2rust-Optimise-FAILED.patch  0038-f2rust-Add-non-mutating-variant-of-ZZHOLDD.patch  0039-f2rust-ZZPLATFM-Return-more-appropriate-platform-ide.patch  0040-f2rust-Change-CHBASE-to-256-to-simplify-emulation-of.patch
