[workspace]
resolver = "2"
members = [
    "f2rust_compiler",
    "f2rust_std",
    "f2rust_test",
    "rsspice",
    "rsspice_build",
    "generated/rsspice_spicelib-1a",
    "generated/rsspice_spicelib-1b",
    "generated/rsspice_spicelib-2a",
    "generated/rsspice_spicelib-2b",
    "generated/rsspice_spicelib-3a",
    "generated/rsspice_spicelib-3b",
    "generated/rsspice_spicelib-4",
    "generated/rsspice_spicelib",
    "generated/rsspice_support",
    "generated/rsspice_testutil",
    "generated/rsspice_tspice",
    "generated/rsspice_programs",
]

