[package]
name = "f2rust_compiler"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
indexmap = "2.8.0"
log = "0.4.27"
peg = "0.8.5"
relative-path = "1.9.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
