[package]
name = "f2rust_ryu"
version = "0.1.0"
authors = ["Philip Taylor <philip@zaynar.co.uk>"]
description = "ryu-based floating point to decimal mantissa/exponent conversion"
edition = "2018"
license = "Apache-2.0 OR BSL-1.0"
repository = "https://github.com/zaynar/f2rust/f2rust_ryu"
rust-version = "1.36"

[features]
# Use smaller lookup tables. Instead of storing every required power of
# 5, only store every 26th entry, and compute intermediate values with a
# multiplication. This reduces the lookup table size by about 10x (only
# one case, and only f64) at the cost of some performance.
small = []

[dependencies]
no-panic = { version = "0.1", optional = true }
