[package]
name = "f2rust_std"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Standard library for FORTRAN-to-Rust translated programs"
readme = "README.md"
repository = "https://github.com/zaynar/f2rust"

[dependencies]
bytemuck = { version = "1.22.0", features = ["must_cast"] }
chrono = { version = "0.4.40", features = ["alloc", "now"] }
ryu_floating_decimal = "=0.1.0"
tempfile = "3.19.1"
thiserror = "2.0.12"
