[package]
name = "rsspice"
version = "0.1.0"
edition = "2024"

[dependencies]
f2rust_std = { path = "../f2rust_std" }

[dev-dependencies]
approx = "0.5.1"
clap = { version = "4.5.37", features = ["derive"] }
nalgebra = "0.33.2"
tempfile = "3.19.1"

[features]
tspice = []

[[example]]
name = "convtm"
path = "lessons/remote_sensing/convtm.rs"

[[example]]
name = "subpts"
path = "lessons/remote_sensing/subpts.rs"

[[example]]
name = "visibl"
path = "lessons/event_finding/visibl.rs"
