[package]
name = "rsspice_build"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zaynar/f2rust"

[dependencies]
anyhow = "1.0.97"
html5ever = "0.27.0"
indexmap = "2.8.0"
markup5ever_rcdom = "0.3.0"
rayon = "1.10.0"
regex = "1.11.1"
relative-path = "1.9.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
walkdir = "2.5.0"

f2rust_compiler = { path = "../f2rust_compiler" }
